[package]
name = "kmeans"
version = "0.2.0"
edition = "2021"
authors = ["Ramin"]
description = "A simple implementation of KMeans algorithm."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
ndarray = "0.15.6"
ndarray-csv = "0.5.2"
rand = "0.8.5"
